clusters/home/apps/kiwix/00namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kiwix
  labels:
    app: kiwix
