clusters/home/apps/kiwix/kiwix-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiwix-ingress
  namespace: kiwix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia-forwardauth@kubernetescrd


spec:
  rules:
  - host: kiwix.bytechance.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiwix-service
            port:
              number: 8080
  tls:
  - hosts:
    - kiwix.bytechance.dev
    secretName: kiwix-tls
